--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--
-YaelChecker is a totally free Mass Credit Card Checker.
+ElmoChecker is a totally free Mass Credit Card Checker.
 RE-WRITED BY YAEL MASSIEU.
 Telegram: @sterytools
 Insta: @is.leay
@@ -38,7 +38,7 @@ Portfolio: https://yael.pages.dev/
   <body>
     <header>
       <div class="title">
-        <img src="assets/img/cc.svg" alt="Icon" /> YaelChecker
+        <img src="assets/img/cc.svg" alt="Icon" /> ElmoChecker
       </div>
       <div class="hh-title">Credit Card Checker</div>
       <div class="p" id="cards">
@@ -64,27 +64,18 @@ Portfolio: https://yael.pages.dev/
     </div>
     <hr class="separador" />
     <footer>
-      <p class="boldy main"><i class="fa-solid fa-globe"></i> YaelChecker</p>
+      <p class="boldy main"><i class="fa-solid fa-globe"></i> ElmoChecker</p>
       <p class="boldy info">
-        <i class="fa-solid fa-circle-info"></i> YaelChecker is a totally free
+        <i class="fa-solid fa-circle-info"></i> ElmoChecker is a totally free
         Mass Credit Card Checker
       </p>
       <p class="boldy">
         <i class="fa-solid fa-heart"></i> Free, No Ads & Open Source
       </p>
       <p class="boldy">
-        <i class="fa-solid fa-user-check"></i> Developer:
-        <a href="https://yael.pages.dev/" target="_blank">Yael Massieu</a>
-      </p>
-      <p class="boldy">
         <i class="fa-brands fa-github"></i> My Github profile:
-        <a href="https://github.com/yaelsito" target="_blank">Yaelsito</a>
+        <a href="https://github.com/lesuchiha" target="_blank">Shad0wned</a>
       </p>
-      <p class="boldy">
-        <i class="fa-solid fa-code"></i> SOURCE CODE
-        <a href="https://github.com/yaelsito/YaelChecker" target="_blank"
-          >HERE</a
-        >
       </p>
       <p class="boldy">
         <i class="fa-solid fa-credit-card"></i> CC CHECKER UNLIMITED:
